--- a/src/app/Styles/body.scss
+++ b/src/app/Styles/body.scss
@@ -1,26 +1,27 @@
 .body {
   display: flex;
+  margin: auto;
   min-height: 1400px;
-  width: 100%;
   padding-left: 5%;
   padding-right: 5%;
-  margin: auto;
-
+  padding-top: 40px;
+  width: 100%;
 }
-// .top_button{
-//   display: block;
-//   position: absolute;
-//   border: 4px solid rgb(62, 62, 62);
-//   border-radius: 100%;
-//   background-color: black;
-//   width: 50px;
-//   height: 50px;
-//   text-align: center;
-//   // align-items: baseline;
-//   right: 10%;
-
-//   bottom: 10%r;
-//   padding-top: 12px;
-//   font-size: 15px;
-//   font-weight: bold;
-// }
+.top_button {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 100%;
+  border: 4px solid rgba(255, 255, 255, 0.148);
+  bottom: 2.5%;
+  color: white;
+  display: block;
+  font-size: 15px;
+  font-weight: bold;
+  height: 50px;
+  padding: 0;
+  position: fixed;
+  right: 1%;
+  text-align: center;
+  width: 50px;
+  z-index: 1;
+}
