--- a/src/app/Styles/footer.scss
+++ b/src/app/Styles/footer.scss
@@ -1,34 +1,30 @@
 .footer {
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(30, 30, 30);
-    align-items: center;
-    color: white;
-    padding-left: 5%;
-    padding-right: 5%;
-    height: 100px;
-    position: sticky;
-    top: 0;
-    .footer_left {
-        min-width: 250px;
-      width: 15%;
-
-      text-align: center;
-    }
-    .footer_mid {
-        width: 100%;
-  
-    }
-    .footer_right {
-      text-align: center;
-      min-width: 250px;
-      width: 15%;
-    }
-    .nav {
-      justify-content: space-between;
-      a {
-  
-      }
-    }
+  align-items: center;
+  background-color: rgb(30, 30, 30);
+  color: white;
+  display: flex;
+  height: 100px;
+  justify-content: space-between;
+  padding-left: 5%;
+  padding-right: 5%;
+  position: sticky;
+  top: 0;
+  .footer_left {
+    min-width: 250px;
+    text-align: center;
+    width: 15%;
   }
-  
+  .footer_mid {
+    text-align: center;
+    width: 100%;
+  }
+  .footer_right {
+    min-width: 250px;
+    text-align: center;
+    width: 15%;
+  }
+  .nav {
+    display: flex;
+    justify-content: space-around;
+  }
+}
