--- a/src/app/Styles/header.scss
+++ b/src/app/Styles/header.scss
@@ -1,32 +1,29 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  background-color: rgba(80, 80, 80, 0.9);
   align-items: center;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.11);
   color: white;
+  display: flex;
+  height: 40px;
+  justify-content: space-between;
   padding-left: 5%;
   padding-right: 5%;
-  height: 40px;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
   .header_left {
-    width: 15%;
+    color: white;
     min-width: 250px;
     text-align: center;
-    color: rgb(160,236,253);
-  }
-  .header_mid {
-
+    width: 15%;
   }
   .header_right {
-    text-align: center;
     min-width: 250px;
+    text-align: center;
     width: 15%;
   }
   .nav {
-    justify-content: space-between;
-    a {
-
-    }
+    display: flex;
+    justify-content: space-around;
   }
 }
