--- a/src/app/Styles/post_container.scss
+++ b/src/app/Styles/post_container.scss
@@ -1,10 +1,19 @@
-.post_container{
-    width: 100%;
-    padding: 2%;
-    .post{
-        height: 300px;
-        background-color: rgb(25, 25, 25);
-        margin: 10px;
-        padding: 20px;
+.post_container {
+  color: white;
+  padding: 2%;
+  width: 100%;
+  .post {
+    background-color: rgba(255, 255, 255, 0.061);
+    display: flex;
+    height: 300px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 20px;
+    .post_image {
+      height: 260px;
+      overflow: hidden;
+      padding-right: 20px;
+      width: 260px;
     }
+  }
 }
