--- a/src/app/Styles/sidebar.scss
+++ b/src/app/Styles/sidebar.scss
@@ -1,49 +1,46 @@
 .sidebar {
-    width: 20%;
-    min-width: 250px;
-    background-color: rgba(255, 255, 255, 0.1);
-    align-items: center;
-    color: white;
-    padding: 30px 1%;
-    .profile_top{
-      display:flex;
-      justify-content: center;
-      margin: auto;
-      .profile_image{
-        border-radius: 100%;
-        border: 5px solid rgb(255, 255, 255);
-        margin-bottom: 10px;
-        }
-      }
-      .profile_text{
-        margin-bottom: 20px;
-        
-        .profile_name{
-          text-align: center;
-          margin-bottom: 10px;
-        }
-        .profile_position{
-          text-align: left;
-
-        }
-        .profile_social{
-          text-align: left;
-
-        }
-        .profile_email{
-          text-align: left;
-
-        }
-        .profile_workplace{
-          text-align: left;
-        }
-      }
-    .nav {
-      justify-content: space-between;
-      a {
-        margin-right: 5px;
-      }
-
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  min-width: 250px;
+  padding: 30px 1%;
+  width: 20%;
+  .profile_top {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    .profile_image {
+      border-radius: 100%;
+      border: 5px solid rgb(255, 255, 255);
+      margin-bottom: 10px;
     }
   }
-  
+  .profile_text {
+    margin-bottom: 20px;
+    .profile_name {
+      margin-bottom: 10px;
+      text-align: center;
+    }
+    .profile_position {
+      text-align: left;
+    }
+    .profile_social {
+      text-align: left;
+      .profile_social_notion {
+        color: #b7edf6;
+      }
+    }
+    .profile_email {
+      text-align: left;
+    }
+    .profile_workplace {
+      text-align: left;
+    }
+  }
+  .nav {
+    justify-content: space-between;
+    a {
+      margin-right: 5px;
+    }
+  }
+}
