--- a/src/app/Styles/post_container.scss
+++ b/src/app/Styles/post_container.scss
@@ -1,7 +1,9 @@
 .post_container {
   color: white;
   padding: 2%;
+  position: relative;
   width: 100%;
+  z-index: 0;
   .post {
     background-color: rgba(255, 255, 255, 0.061);
     display: flex;
@@ -9,11 +11,15 @@
     margin-bottom: 10px;
     margin-top: 10px;
     padding: 20px;
+    position: relative;
+    z-index: 0;
     .post_image {
       height: 260px;
       overflow: hidden;
       padding-right: 20px;
+      position: relative;
       width: 260px;
+      z-index: 0;
     }
   }
 }
