--- a/src/app/Styles/globals.scss
+++ b/src/app/Styles/globals.scss
@@ -1,13 +1,13 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 14, 41, 84;
-  --background-end-rgb: 31, 110, 140;
+  --background-start-rgb: 14, 41, 84, 0;
+  --background-end-rgb: 31, 110, 140, 0;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -17,10 +17,7 @@
     #0071ff33 160deg,
     transparent 360deg
   );
-  --secondary-glow: radial-gradient(
-    rgb(50, 50, 50),
-    rgba(255, 255, 255, 0)
-  );
+  --secondary-glow: radial-gradient(rgb(50, 50, 50), rgba(255, 255, 255, 0));
 
   --tile-start-rgb: 239, 245, 249;
   --tile-end-rgb: 228, 232, 233;
@@ -85,19 +82,25 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
+}
+button {
+  border: none;
+  width: 28px;
+  background: none;
+  cursor: pointer;
+}
+body::-webkit-scrollbar {
+  width: 5px;
+}
+body::-webkit-scrollbar-track {
+  background-color: none;
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-image: linear-gradient(180deg, #0e2954 0%, #2e8a99 99%);
 }
 
 @media (prefers-color-scheme: dark) {
