--- a/src/app/Styles/body.scss
+++ b/src/app/Styles/body.scss
@@ -1,4 +1,7 @@
 .body {
+  --background-start-rgb: 14, 41, 84;
+  --background-end-rgb: 31, 110, 140;
+
   display: flex;
   margin: auto;
   min-height: 1400px;
@@ -6,12 +9,20 @@
   padding-right: 5%;
   padding-top: 40px;
   width: 100%;
+  color: rgb(var(--foreground-rgb));
+
+  background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
 .top_button {
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.180);
+  background-color: rgba(0, 0, 0, 0.18);
   border-radius: 100%;
-  border: 4px solid rgba(255, 255, 255, 0.250);
+  border: 4px solid rgba(255, 255, 255, 0.25);
   bottom: 2.5%;
   color: white;
   display: block;
@@ -27,9 +38,9 @@
 }
 .chat_button {
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.180);
+  background-color: rgba(0, 0, 0, 0.18);
   border-radius: 100%;
-  border: 4px solid rgba(255, 255, 255, 0.250);
+  border: 4px solid rgba(255, 255, 255, 0.25);
   bottom: 2.5%;
   color: white;
   display: block;
