--- a/src/app/Styles/body.scss
+++ b/src/app/Styles/body.scss
@@ -3,13 +3,13 @@
   --background-end-rgb: 31, 110, 140;
 
   display: flex;
-  margin: auto;
-  min-height: 1400px;
+  min-height: 100vh;
   padding-left: 5%;
   padding-right: 5%;
-  padding-top: 40px;
   width: 100%;
   color: rgb(var(--foreground-rgb));
+  position: relative;
+  overflow: hidden;
 
   background: linear-gradient(
       to bottom,
@@ -31,26 +31,8 @@
   height: 50px;
   padding: 0;
   position: fixed;
-  right: 4%;
+  right: 10px;
   text-align: center;
   width: 50px;
   z-index: 1;
-}
-.chat_button {
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.18);
-  border-radius: 100%;
-  border: 4px solid rgba(255, 255, 255, 0.25);
-  bottom: 2.5%;
-  color: white;
-  display: block;
-  font-size: 15px;
-  font-weight: bold;
-  height: 50px;
-  padding: 0;
-  position: fixed;
-  right: 1%;
-  text-align: center;
-  width: 50px;
-  z-index: 2;
 }
