--- a/src/app/Styles/footer.scss
+++ b/src/app/Styles/footer.scss
@@ -19,12 +19,31 @@
     width: 100%;
   }
   .footer_right {
-    min-width: 250px;
-    text-align: center;
-    width: 15%;
-  }
-  .nav {
     display: flex;
-    justify-content: space-around;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    min-width: 240px;
+
+    .social_links {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+
+      .social_link {
+        color: white;
+        font-size: 1.5rem;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: color 0.3s ease;
+
+        &:hover {
+          color: #b7edf6;
+        }
+      }
+    }
   }
 }
