--- a/src/app/Styles/globals.scss
+++ b/src/app/Styles/globals.scss
@@ -100,7 +100,7 @@ body::-webkit-scrollbar-track {
 }
 body::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  background-image: linear-gradient(180deg, #0e2954 0%, #2e8a99 99%);
+  background-image: linear-gradient(180deg, #0e2954 0%, #2e6b99 99%);
 }
 
 @media (prefers-color-scheme: dark) {
