fix: Adjust navigation width styling in header

--- a/src/app/Styles/header.scss
+++ b/src/app/Styles/header.scss
@@ -67,7 +67,7 @@
     .nav {
       display: flex;
       gap: 20px;
-      min-width: 240px;
+      width: 240px;
       justify-content: center;
       padding-right: 12px;
       align-items: center;
