--- a/src/app/Styles/globals.scss
+++ b/src/app/Styles/globals.scss
@@ -80,6 +80,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #000000;
 }
 
 a {
@@ -96,7 +97,7 @@ body::-webkit-scrollbar {
   width: 5px;
 }
 body::-webkit-scrollbar-track {
-  background-color: none;
+  background-color: #000000;
 }
 body::-webkit-scrollbar-thumb {
   border-radius: 5px;
