--- a/src/app/Styles/post_container.scss
+++ b/src/app/Styles/post_container.scss
@@ -4,8 +4,7 @@
   position: relative;
   max-width: 80%;
   z-index: 0;
-  width: 100%;
-  max-width: 1200px;
+  flex: 1;
   margin: 0 auto;
   padding: 8px;
 
