--- a/src/app/Styles/side_index.scss
+++ b/src/app/Styles/side_index.scss
@@ -2,6 +2,17 @@
   min-width: 240px;
   width: 240px;
   position: relative;
+
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: none;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-image: linear-gradient(180deg, #2e6b99 0%, #2e6b99 99%);
+  }
   .contents {
     position: fixed;
     top: 48px;
