--- a/src/app/Styles/sidebar.scss
+++ b/src/app/Styles/sidebar.scss
@@ -5,6 +5,17 @@
   width: 240px;
   position: relative;
 
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: none;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-image: linear-gradient(180deg, #2e6b99 0%, #2e6b99 99%);
+  }
+
   .contents {
     position: fixed;
     top: 60px;
