--- a/src/app/Styles/side_index.scss
+++ b/src/app/Styles/side_index.scss
@@ -11,8 +11,9 @@
   }
   ::-webkit-scrollbar-thumb {
     border-radius: 5px;
-    background-image: linear-gradient(180deg, #2e6b99 0%, #2e6b99 99%);
+    background-image: linear-gradient(180deg, #ffffff46 0%, #ffffffbb 99%);
   }
+
   .contents {
     position: fixed;
     top: 48px;
