--- a/src/app/Styles/side_index.scss
+++ b/src/app/Styles/side_index.scss
@@ -87,7 +87,7 @@
         }
 
         .count {
-          color: rgba(255, 255, 255, 0.5);
+          color: rgb(255, 255, 255);
           font-size: 0.9em;
           background-color: rgba(255, 255, 255, 0.1);
           padding: 2px 8px;
