--- a/src/app/Styles/body.scss
+++ b/src/app/Styles/body.scss
@@ -17,7 +17,40 @@
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+  @media screen and (max-width: 1280px) {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  @media screen and (max-width: 1024px) {
+    padding-left: 12px;
+    padding-right: 12px;
+    flex-direction: row;
+    padding-top: 48px;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 32px;
+  }
+
+  .content_wrapper {
+    display: flex;
+    width: 100%;
+    gap: 24px;
+
+    @media screen and (max-width: 1280px) {
+      gap: 16px;
+    }
+
+    @media screen and (max-width: 1024px) {
+      flex-direction: column;
+    }
+  }
 }
+
 .top_button {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.18);
@@ -35,4 +68,12 @@
   text-align: center;
   width: 50px;
   z-index: 1;
+
+  @media screen and (max-width: 768px) {
+    bottom: 16px;
+    right: 16px;
+    width: 40px;
+    height: 40px;
+    font-size: 12px;
+  }
 }
