--- a/src/app/Styles/header.scss
+++ b/src/app/Styles/header.scss
@@ -9,6 +9,10 @@
   z-index: 100;
   height: 40px;
 
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+
   &.expanded {
     height: 100vh;
     display: flex;
