feat: Implement post navigation and modal enhancements in PostModal component

--- a/src/app/Styles/footer.scss
+++ b/src/app/Styles/footer.scss
@@ -2,14 +2,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 24px;
+  padding: 8px 5%;
   color: rgba(255, 255, 255, 0.7);
   background: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(8px);
   font-size: 0.9rem;
 
   .footer_left {
+    width: 240px;
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 16px;
 
@@ -36,16 +38,16 @@
     .contact {
       display: flex;
       align-items: center;
+      gap: 16px;
+    }
+    .social_links {
+      width: 56px;
+      height: 28px;
+      display: flex;
       gap: 8px;
-      .social_links {
-        width: 28px;
-        height: 28px;
-        display: flex;
-        gap: 8px;
-        justify-content: center;
-        &:hover {
-          color: #b7edf6;
-        }
+      justify-content: center;
+      &:hover {
+        color: #b7edf6;
       }
     }
   }
