--- a/src/app/Styles/post_modal.scss
+++ b/src/app/Styles/post_modal.scss
@@ -119,21 +119,21 @@
       &::-webkit-scrollbar {
         width: 8px;
       }
-  
+
       &::-webkit-scrollbar-track {
         background: rgba(255, 255, 255, 0.1);
         border-radius: 4px;
       }
-  
+
       &::-webkit-scrollbar-thumb {
         background: rgba(183, 237, 246, 0.3);
         border-radius: 4px;
-  
+
         &:hover {
           background: rgba(183, 237, 246, 0.5);
         }
       }
-     .modal_thumbnail {
+      .modal_thumbnail {
         margin: -42px -42px 32px -42px;
         height: 500px;
         position: relative;
@@ -200,7 +200,8 @@
             font-size: 1.1rem;
           }
 
-          pre, code {
+          pre,
+          code {
             background-color: rgba(255, 255, 255, 0.1);
             padding: 0.2em 0.4em;
             border-radius: 3px;
@@ -221,7 +222,8 @@
             margin: 8px 0;
           }
 
-          ul, ol {
+          ul,
+          ol {
             margin: 1rem 0;
             padding-left: 1.5rem;
             li {
