--- a/src/app/Styles/body.scss
+++ b/src/app/Styles/body.scss
@@ -56,7 +56,34 @@
   background-color: rgba(0, 0, 0, 0.18);
   border-radius: 100%;
   border: 4px solid rgba(255, 255, 255, 0.25);
-  bottom: 2.5%;
+  bottom: 4rem;
+  color: white;
+  display: block;
+  font-size: 15px;
+  font-weight: bold;
+  height: 50px;
+  padding: 0;
+  position: fixed;
+  right: 10px;
+  text-align: center;
+  width: 50px;
+  z-index: 1;
+
+  @media screen and (max-width: 768px) {
+    bottom: 16px;
+    right: 16px;
+    width: 40px;
+    height: 40px;
+    font-size: 12px;
+  }
+}
+
+.language_selector_button {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.18);
+  border-radius: 100%;
+  border: 4px solid rgba(255, 255, 255, 0.25);
+  bottom: 0.5rem;
   color: white;
   display: block;
   font-size: 15px;
