refactor: Simplify post modal navigation and translations

--- a/src/app/Styles/post_modal.scss
+++ b/src/app/Styles/post_modal.scss
@@ -52,8 +52,7 @@
         cursor: pointer;
         transition: all 0.2s ease;
         display: flex;
-        align-items: center;
-        justify-content: center;
+        overflow: hidden;
         min-width: 100px;
 
         &:hover {
