--- a/src/app/Styles/body.scss
+++ b/src/app/Styles/body.scss
@@ -56,7 +56,7 @@
   background-color: rgba(0, 0, 0, 0.18);
   border-radius: 100%;
   border: 4px solid rgba(255, 255, 255, 0.25);
-  bottom: 4rem;
+  bottom: 4.5em;
   color: white;
   display: block;
   font-size: 15px;
@@ -83,7 +83,7 @@
   background-color: rgba(0, 0, 0, 0.18);
   border-radius: 100%;
   border: 4px solid rgba(255, 255, 255, 0.25);
-  bottom: 0.5rem;
+  bottom: 0.5em;
   color: white;
   display: block;
   font-size: 15px;
