fix: Adjust mobile responsiveness for button positioning

--- a/src/app/Styles/body.scss
+++ b/src/app/Styles/body.scss
@@ -70,8 +70,8 @@
   z-index: 1;
 
   @media screen and (max-width: 768px) {
-    bottom: 16px;
-    right: 16px;
+    bottom: 4.2em;
+    right: 0.4em;
     width: 40px;
     height: 40px;
     font-size: 12px;
@@ -97,8 +97,8 @@
   z-index: 1;
 
   @media screen and (max-width: 768px) {
-    bottom: 16px;
-    right: 16px;
+    bottom:0.4em;
+    right: 0.4em;
     width: 40px;
     height: 40px;
     font-size: 12px;
